--- a/WebCalculator_/src/main/resources/static/index.html
+++ b/WebCalculator_/src/main/resources/static/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <form action="http://localhost:8080/web-calculator" method="POST">
-    <input type="text" name="opOne" />
+    <input type="text" name="op1" />
     <select name="operation">
         <option value="add">+</option>
         <option value="sub">-</option>
     </select>
-    <input type="text" name="opTwo" />
+    <input type="text" name="op2" />
     <input type = "submit" value="Send"/>
 </form>
 </body>
