--- a/WebCalculator_/src/main/resources/static/index.html
+++ b/WebCalculator_/src/main/resources/static/index.html
@@ -5,13 +5,13 @@
     <title>Web Calculator</title>
 </head>
 <body>
-<form action="http://localhost:8080/web-calculator" method="POST">
+<form action="http://localhost:8080/calculator" method="POST">
     <input type="text" name="op1" />
-    <select name="operation">
+    <input type="text" name="op2" />
+    <select name="operator">
         <option value="add">+</option>
         <option value="sub">-</option>
     </select>
-    <input type="text" name="op2" />
     <input type = "submit" value="Send"/>
 </form>
 </body>
